--- a/pages/index.html
+++ b/pages/index.html
@@ -4,18 +4,89 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Form Handling</title>
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-color: #f4f4f9;
+        margin: 0;
+        padding: 20px;
+      }
+      h2 {
+        color: #333;
+        margin-bottom: 20px;
+      }
+      form {
+        background-color: #fff;
+        padding: 20px;
+        border-radius: 8px;
+        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+        width: 100%;
+        max-width: 400px;
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+      }
+      label {
+        font-size: 14px;
+        color: #333;
+        margin-bottom: 5px;
+      }
+      input[type="text"],
+      input[type="file"] {
+        width: 100%;
+        padding: 10px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        font-size: 16px;
+        box-sizing: border-box;
+      }
+      input[type="text"]:focus,
+      input[type="file"]:focus {
+        border-color: #007bff;
+        outline: none;
+        box-shadow: 0 0 5px rgba(0, 123, 255, 0.3);
+      }
+      input[type="submit"] {
+        width: 100%;
+        padding: 10px;
+        background-color: #007bff;
+        color: #fff;
+        border: none;
+        border-radius: 4px;
+        font-size: 16px;
+        cursor: pointer;
+        transition: background-color 0.3s;
+      }
+      input[type="submit"]:hover {
+        background-color: #0056b3;
+      }
+      .form-group {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+      }
+    </style>
   </head>
   <body>
     <h2>Upload file using Form (multipart/form-data)</h2>
     <form action="/images/upload" method="post" enctype="multipart/form-data">
-      <input
-        type="text"
-        name="id"
-        id="id"
-        placeholder="Enter id"
-        autocomplete="off"
-      />
-      <input type="file" name="file" id="file" />
+      <div class="form-group">
+        <label for="id">ID</label>
+        <input
+          type="text"
+          name="id"
+          id="id"
+          placeholder="Enter id"
+          autocomplete="off"
+        />
+      </div>
+      <div class="form-group">
+        <label for="file">File</label>
+        <input type="file" name="file" id="file" />
+      </div>
       <input type="submit" value="Upload" />
     </form>
   </body>
